--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,10 +4,10 @@
 <idea-plugin>
 
   <!-- Unique id for this plugin. Must stay constant for the life of the plugin. -->
-  <id>org.intellij.sdk.pycharm</id>
+  <id>org.intellij.sdk.pycharm.wordlength</id>
 
   <!-- Text to display as name on Settings | Plugin page -->
-  <name>SDK: PyCharm Sample</name>
+  <name>Word Length Calculator</name>
 
   <!-- Requires the python plugin to run -->
   <depends>com.intellij.modules.python</depends>
@@ -15,27 +15,22 @@
   <!-- Text to display as description on Settings | Plugin page -->
   <description>
     <![CDATA[
-      Demonstrates how to configure a plugin project for a PyCharm plugin.
+      This plugin calculates and prints the length of each word in the selected text. Designed for PyCharm and requires the Python plugin.
     ]]>
   </description>
   <change-notes>
     <![CDATA[
-      <b>0.1.0</b> First release v2019.1 IntelliJ Platform / PyCharm<br>
+      <b>1.0.0</b> Initial release for PyCharm.<br>
     ]]>
   </change-notes>
 
   <!-- Text to display as company information on Settings | Plugin page -->
-  <vendor url="https://plugins.jetbrains.com">IntelliJ Platform SDK</vendor>
+  <vendor url="https://plugins.jetbrains.com">Anton Kosovskii</vendor>
 
   <actions>
     <!-- Define a new menu group as a last entry in the main menu -->
-    <group id="org.intellij.sdk.pycharm.NewGroupedActions" text="SDK: Plugin" popup="true">
+    <group id="org.intellij.sdk.pycharm.NewGroupedActions" text="Word Length Tools" popup="true">
       <add-to-group group-id="MainMenu" anchor="last"/>
-      <!-- Add a single action to the new group -->
-      <action id="org.intellij.sdk.pycharm.PopupDialogAction" class="org.intellij.sdk.pycharm.PopupDialogAction"
-              text="Pop a Dialog" description="SDK PyCharm basics example" icon="SdkIcons.Sdk_default_icon">
-      </action>
-
       <!-- New WordLengthAction -->
       <action id="org.intellij.sdk.pycharm.WordLengthAction"
               class="org.intellij.sdk.pycharm.WordLengthAction"
