--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -37,6 +37,7 @@
         text="Print Word Lengths"
         description="Prints the length of each word in the selected text"
         icon="SdkIcons.Sdk_default_icon">
+        <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt W"/>
       </action>
     </group>
   </actions>
